+ Finished menu js; + Finished search function - no longer blocking the menu js; + Refactored viz description expand/collapse js code for better useability

--- a/cubetube/static/css/base.css
+++ b/cubetube/static/css/base.css
@@ -772,7 +772,7 @@ nav {
   div.small, div.always-small {
 	position: fixed;
 	top: 17px;
-	left: 510px;
+	left: 20%; /*510px;*/
 	width: 18%;
 	height: 25px;
 	z-index: 3;
@@ -961,14 +961,15 @@ header {
 
 .search-button {
 	margin-top: 0px !important;
-	position: inherit;
-	top: 19px;
-	left: 740px;
+	position: relative; /*inherit;*/
+	top: -27px;
+	left: 20%; /*740px;*/
 	height: 23px;
 	width: 65px;
-	float: left;
+	height: 27px;
+	float: right;
 	z-index: 3;
-	padding-top: 4px;
+	padding-top: 6px;
 	/* padding: 12px; */
 	font-size: 12px;
 	border-radius: 3px;
